--- a/templates/hello.html
+++ b/templates/hello.html
@@ -242,21 +242,21 @@
         <header>
             <div class="logo">
                 <div class="logo-icon"></div>
-                BookAI
+                <img src="https://raw.githubusercontent.com/Adarshagupta/BookAI/main/logo.png" width="50px">BookAI
             </div>
             <nav>
                 <a href="#features">Features</a>
                 <a href="#how-it-works">How It Works</a>
                 <a href="#roadmap">Roadmap</a>
-                <a href="#" class="button">New Account</a>
-                <a href="#" class="button">Sign In</a>
+                <a href="/playground" class="button">New Account</a>
+                <a href="/playground" class="button">Sign In</a>
             </nav>
         </header>
 
         <section class="hero">
             <h1>Explore the Possibilities of <span class="highlight">AI Book Writing</span> with BookAI</h1>
             <p class="subtitle">Unleash the power of AI to create captivating books in minutes.</p>
-            <a href="#" class="cta">Get Started</a>
+            <a href="/playground" class="cta">Get Started</a>
         </section>
 
         <section class="main-content">
