--- a/templates/hello.html
+++ b/templates/hello.html
@@ -597,6 +597,8 @@
             }
         }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 </head>
 <body>
   <div id="three-container"></div>
