--- a/templates/hello.html
+++ b/templates/hello.html
@@ -9,6 +9,7 @@
     <meta name="description" content="BookAI harnesses cutting-edge artificial intelligence to generate high-quality, professional books in minutes. Revolutionize your writing process with our AI-powered book creation tool. Experience the future of authorship today.">
     <meta name="keywords" content="AI book writing, artificial intelligence books, automated book generation, BookAI, AI writing tool, instant book creation, digital authorship, AI-assisted writing, smart book compiler, machine learning literature">
     <meta name="author" content="BookAI">
+    <meta name="google-site-verification" content="BR_9JAf8lN8Sv0QVG7AAn1Rhu097krlgboMBA-k-Ydk" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3035593618466231"
      crossorigin="anonymous"></script>
     
